# Contract-Clause-Risk-Reviewer

./: .gitignore  README.md  docker-compose.yml
apps/backend-fastapi/: .dockerignore  .env  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  database.py  docker-entrypoint.sh  main.py  pyproject.toml
apps/backend-fastapi/alembic/: env.py
apps/backend-fastapi/alembic/versions/: 0c41a8268ed0_initial_schema.py
apps/backend-fastapi/app/: __init__.py  main.py
apps/backend-fastapi/app/agents/: base.py  classifier.py  judge.py  matcher.py  orchestrator.py  risk_scorer.py  segmenter.py
apps/backend-fastapi/app/api/: auth.py  contracts.py  deps.py  evaluate.py  health.py  playbook.py
apps/backend-fastapi/app/core/: config.py  db.py  exceptions.py  logging.py  retention.py  security.py
apps/backend-fastapi/app/evaluation/: metrics.py  report.py  runner.py
apps/backend-fastapi/app/guardrails/: citation_validity.py  disclaimer.py  grounding.py  no_invented_fallback.py
apps/backend-fastapi/app/llm/: client.py  structured.py
apps/backend-fastapi/app/models/: __init__.py  audit.py  playbook.py  user.py
apps/backend-fastapi/app/parsers/: docx.py  models.py  normalizer.py  pdf.py
apps/backend-fastapi/app/prompts/: __init__.py  classifier.v1.jinja  judge.v1.jinja  risk_scorer.v1.jinja
apps/backend-fastapi/app/rag/: citation.py  embedder.py  ingest.py  (+2 more)
apps/backend-fastapi/auth/: config.py  jwt.py  oauth.py  router.py  schemas.py
apps/backend-fastapi/models/: __init__.py  uesrs.py
apps/backend-fastapi/scripts/: ingest_playbook.py  run_eval.py
(+66 files in other folders)
