[project]
name = "contract-reviewer"
version = "0.1.0"
description = "Contract Clause Risk Reviewer - AI-assisted clause risk analysis with grounded RAG"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.2",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "python-multipart>=0.0.12",
    # --- auth (Google OAuth + JWT) ---
    "authlib>=1.3",
    "python-jose[cryptography]>=3.3",
    "itsdangerous>=2.2",
    # --- LLM ---
    "google-genai>=1.20",
    "jinja2>=3.1",
    # --- parsing ---
    "pymupdf>=1.24",
    "python-docx>=1.1",
    # --- rag / storage ---
    "pgvector>=0.3",
    "redis>=5.1",
    "pyyaml>=6.0",
    "rank-bm25>=0.2",
    # --- observability ---
    "structlog>=24.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "ruff>=0.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["fastapi.Depends"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
